Text truncate notes to prevent them from growing too much

--- a/teams/static/css/custom.css
+++ b/teams/static/css/custom.css
@@ -26,4 +26,7 @@
   .image-grid img:hover {
     transform: scale(1.05);
   }
-  
+
+  .notes-column {
+    max-width: 15rem;
+  }
